fixed display on smaller screens

--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -2,7 +2,7 @@
 	@mixin clearfix; 
 
 	&--gutters {
-		padding-right: : - 65px;
+		margin-right: -65px;
 	}
 
 	&--gutters > div {
@@ -10,14 +10,22 @@
 	}
 
 	@mixin atMedium {
+		&__medium-4 {
+			float: left;
+			width: 33.33%;
+		}
 
-	&__medium-4 {
-		float: left;
-		width: 33.33%;
-	}
+		&__medium-4--larger {
+			width: 37%;
+		}
 
-	&__medium-8 {
-		float: left;
-		width: 66.66%;
+		&__medium-8 {
+			float: left;
+			width: 66.66%;
+		}
+
+		&__medium-8 {
+			width: 63%;
+		}
 	}
 }
